--- a/kimuntu_sprint1.html
+++ b/kimuntu_sprint1.html
@@ -7,15 +7,15 @@
   <style>
     *{margin:0;padding:0;box-sizing:border-box}
     :root{
-      --primary:#2563eb;--primary-dark:#1e40af;--secondary:#7c3aed;
+      --primary:#0369a1;--primary-dark:#075985;--secondary:#0284c7;
       --success:#10b981;--danger:#ef4444;--warning:#f59e0b;
-      --dark:#1f2937;--light:#f3f4f6;--white:#ffffff;
-      --gradient:linear-gradient(135deg,#667eea 0%,#764ba2 100%);
+      --dark:#1f2937;--light:#cff4fc;--white:#ffffff;
+      --gradient:linear-gradient(135deg,#0284c7 0%,#0369a1 100%);
     }
     html{scroll-behavior:smooth}
     body{
       font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,sans-serif;
-      background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);
+      background:linear-gradient(135deg,#0284c7 0%,#0369a1 100%);
       min-height:100vh;color:var(--dark);
     }
 
@@ -77,7 +77,9 @@
     <div class="container nav-inner">
       <a href="#home" class="logo">KimuntuPro AI</a>
       <div class="nav-menu">
-        <a href="#features" class="nav-link">Features</a>
+        <a href="#personal" class="nav-link">Personal</a>
+        <a href="#legal" class="nav-link">Legal</a>
+        <a href="#business" class="nav-link">Business</a>
         <a href="#pricing" class="nav-link">Pricing</a>
         <a href="#about" class="nav-link">About</a>
         <a href="#pricing" class="btn btn-primary">Get Started</a>
@@ -93,7 +95,7 @@
         <p>Start with the essentials. Draft CVs, outline business plans, and generate basic legal document templates — all from one simple interface.</p>
         <div class="btn-group">
           <a href="#pricing" class="btn btn-primary">View Plans</a>
-          <a href="#features" class="btn btn-secondary">See Features</a>
+          <a href="#personal" class="btn btn-secondary">Explore Services</a>
         </div>
       </div>
     </div>
@@ -103,12 +105,11 @@
   <section id="features">
     <div class="container">
       <div class="card" style="padding:1.5rem">
-        <h2 style="margin-bottom:.25rem">Core Features (Sprint 1)</h2>
+        <h2 style="margin-bottom:.25rem">Core Features</h2>
         <p class="muted">Focused, basic flows to validate value and collect feedback.</p>
 
         <div class="feature-grid" aria-label="Top Features">
           <div class="card feature-card">
-            <div class="feature-icon">💼</div>
             <h3 class="feature-title">Career Basics</h3>
             <ul class="feature-list">
               <li>Simple CV outline generator</li>
@@ -117,7 +118,6 @@
             </ul>
           </div>
           <div class="card feature-card">
-            <div class="feature-icon">📈</div>
             <h3 class="feature-title">Business Basics</h3>
             <ul class="feature-list">
               <li>Business plan outline</li>
@@ -126,7 +126,6 @@
             </ul>
           </div>
           <div class="card feature-card">
-            <div class="feature-icon">⚖️</div>
             <h3 class="feature-title">Legal Basics</h3>
             <ul class="feature-list">
               <li>Common template scaffolds (e.g., NDA)</li>
@@ -135,7 +134,6 @@
             </ul>
           </div>
           <div class="card feature-card">
-            <div class="feature-icon">🔒</div>
             <h3 class="feature-title">Privacy-First</h3>
             <ul class="feature-list">
               <li>No sign-up required to preview</li>
@@ -202,32 +200,38 @@
   <!-- ABOUT -->
   <section id="about">
     <div class="container">
-      <div class="card" style="padding:1.5rem">
-        <h2>About KimuntuPro AI</h2>
-        <p class="muted" style="margin-top:.25rem">
-          KimuntuPro AI unifies core Career, Business, and Legal tools for Canada and the United States. Sprint 1 focuses on simple structures (outlines and checklists) to ensure clarity and quick feedback.
+      <div class="card" style="padding:2rem">
+        <h2 style="text-align:center;margin-bottom:1rem">Why KimuntuPro AI?</h2>
+        <p style="font-size:1.125rem;color:#374151;text-align:center;max-width:600px;margin:0 auto 2rem">
+          We believe everyone deserves access to professional-grade tools for career growth, business development, and legal clarity—without the complexity or high costs.
         </p>
 
-        <div class="about-grid" style="margin-top:1rem">
-          <div class="card" style="padding:1rem">
-            <h3>Security & Compliance</h3>
-            <ul class="feature-list" style="margin-top:.25rem">
-              <li>HTTPS/TLS in transit</li>
-              <li>No PII required for preview</li>
-              <li>GDPR/CCPA-aligned wording</li>
-            </ul>
+        <div class="about-grid" style="margin-top:2rem;gap:1.5rem">
+          <div class="card" style="padding:1.5rem;text-align:center">
+            <h3 style="margin-bottom:0.5rem">Our Mission</h3>
+            <p class="muted">
+              Democratizing access to AI-powered professional tools across career development, business planning, and legal document preparation for North American markets.
+            </p>
           </div>
-          <div class="card" style="padding:1rem">
-            <h3>Legal Note</h3>
-            <p class="muted" style="margin-top:.25rem">
-              We are not a law firm. AI outputs are informational and require human review before use.
+          
+          <div class="card" style="padding:1.5rem;text-align:center">
+            <h3 style="margin-bottom:0.5rem">Privacy First</h3>
+            <p class="muted">
+              Your data stays yours. We use enterprise-grade security with no unnecessary data collection. Preview tools work without signup, and we're GDPR/CCPA compliant.
             </p>
           </div>
         </div>
 
-        <div class="btn-group" style="margin-top:.75rem">
-          <a href="#pricing" class="btn btn-primary">Get Started</a>
-          <a href="#home" class="btn btn-secondary">Back to Top</a>
+        <div class="card" style="padding:1.5rem;margin-top:1.5rem;background:#fef3c7;border-left:4px solid var(--warning)">
+          <h4 style="margin-bottom:0.5rem;color:#92400e">Important Disclaimer</h4>
+          <p style="color:#92400e;margin:0">
+            KimuntuPro AI is not a law firm and does not provide legal advice. All content is for informational purposes only and should be reviewed by qualified professionals before use.
+          </p>
+        </div>
+
+        <div class="btn-group" style="margin-top:2rem">
+          <a href="#pricing" class="btn btn-primary">Start Your Journey</a>
+          <a href="#personal" class="btn btn-secondary">Explore Tools</a>
         </div>
       </div>
     </div>
