integrating personal track ui into broader structure
this commit expands on the ui of the personal track by making it more robust and adding it to the broader structure of the vite application, in the next sprint we will combine all the tracks ui's together and then start working on the backend side for each feature

--- a/personal_track.html
+++ b/personal_track.html
@@ -165,11 +165,11 @@
           <div class="card" style="padding:2rem">
             <h2 style="text-align:center;margin-bottom:1rem">Why Choose Kimuntu ProLaunch AI</h2>
             <ul class="feature-list" style="margin-bottom:1.5rem;list-style:none;padding:0;text-align:left;display:inline-block;">
-              <li style="margin-bottom:0.5rem;">✅ <strong>All-in-One Platform:</strong> Career, business, legal, and innovation tools — in one intelligent hub.</li>
-              <li style="margin-bottom:0.5rem;">✅ <strong>AI-Powered Precision:</strong> Personalized solutions for every user.</li>
-              <li style="margin-bottom:0.5rem;">✅ <strong>Secure &amp; Compliant:</strong> GDPR, CCPA, and PIPEDA standards.</li>
-              <li style="margin-bottom:0.5rem;">✅ <strong>Accessible &amp; Multilingual:</strong> Available in English, French, and Spanish.</li>
-              <li style="margin-bottom:0.5rem;">✅ <strong>Future-Ready:</strong> Designed to empower people and organizations for the next era of intelligent innovation.</li>
+              <li style="margin-bottom:0.5rem;"><strong>All-in-One Platform:</strong> Career, business, legal, and innovation tools — in one intelligent hub.</li>
+              <li style="margin-bottom:0.5rem;"><strong>AI-Powered Precision:</strong> Personalized solutions for every user.</li>
+              <li style="margin-bottom:0.5rem;"><strong>Secure &amp; Compliant:</strong> GDPR, CCPA, and PIPEDA standards.</li>
+              <li style="margin-bottom:0.5rem;"><strong>Accessible &amp; Multilingual:</strong> Available in English, French, and Spanish.</li>
+              <li style="margin-bottom:0.5rem;"><strong>Future-Ready:</strong> Designed to empower people and organizations for the next era of intelligent innovation.</li>
             </ul>
             <p style="font-weight:600;font-size:1.1em;color:var(--primary);margin-top:1rem;">✨ Kimuntu ProLaunch AI — Where Ambition Meets Artificial Intelligence.</p>
           </div>
